# singbox_subscription_convert

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: cli.rs  main.rs  template.rs
src/clash/: dns.rs  mod.rs  proxy.rs  proxy_group.rs
src/clash/proxy/: http.rs  mod.rs  shadowsocks.rs  shadowsocks_r.rs  snell.rs  socks5.rs  trojan.rs  vmess.rs
src/singbox/: dns.rs  experimental.rs  log.rs  mod.rs
src/singbox/common/: base.rs  mod.rs  multiplex.rs  tls.rs  transport.rs
src/singbox/inbound/: base.rs  direct.rs  http.rs  hysteria.rs  hysteria2.rs  mixed.rs  mod.rs  naive.rs  redirect.rs  shadowsocks.rs  shadowtls.rs  socks.rs  tproxy.rs  trojan.rs  tuic.rs  tun.rs  vless.rs  vmess.rs
src/singbox/outbound/: base.rs  block.rs  direct.rs  dns.rs  http.rs  hysteria.rs  hysteria2.rs  mod.rs  selector.rs  shadowsocks.rs  shadowtls.rs  socks.rs  ssh.rs  tor.rs  trojan.rs  tuic.rs  urltest.rs  vless.rs  vmess.rs  wireguard.rs
src/singbox/route/: mod.rs  rule.rs  rule_set.rs
