[package]
name = "subscription_convert"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
reqwest = { version = "0.12.5", default-features = false, features = ["blocking", "json", "rustls-tls"]}
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_with = "3.8.3"
serde_yaml = "0.9.34"
url = "2.5.2"