[package]
name = "subscription_convert"
version = "1.0.0-alpha.1"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0", default-features = false, features = ["blocking", "json", "rustls-tls"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
serde_yaml = "0.9.33"
url = "2"